<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shanujbansal.ExpenseTracker.ViewResults">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_expense_settings"
        android:orderInCategory="100"
        android:title="@string/add_expense"
        android:icon="@drawable/add_expense_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/share_icon"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>
