<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_main_layout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_main_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/expense_header"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:padding="5dp"
        android:text="@string/expense_amount"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/expenseAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/expenseAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:inputType="numberDecimal"
        android:padding="5dp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/expenseDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:padding="5dp"
        android:text="@string/expense_description"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/expenseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:maxLines="3"
        android:padding="5dp" />

    <TextView
        android:id="@+id/categoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:padding="5dp"
        android:text="@string/select_category"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/categoryComboBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categoryDescription"
        android:fadeScrollbars="false"
        android:padding="5dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetBtn" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitBtn" />

    </LinearLayout>
</LinearLayout>
